Added jqury logic

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,6 +16,10 @@ body {
   margin: 0;
 }
 
+span{
+  font-family: 'Menlo', 'Monaco', Courier, monospace;
+  font-size: 14px;
+}
 h3 {
   margin: 0;
 }
