--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,7 +137,7 @@ section {
     -o-transform-style: preserve-3d;
     transform-style: preserve-3d; }
   section .container {
-    background-image: url("/static/img/flags/cover.jpg");
+    //background-image: url("/static/img/flags/cover.jpg");
     position: relative;
     display: inline-block;
     -webkit-perspective: 450px;
@@ -154,12 +154,13 @@ section {
     width: 110px;
     height: 125px;
     cursor: pointer; }
-    @media screen and (max-width: 650px) {
+ 
+ @media screen and (max-width: 650px) {
       section .container {
         width: 90px;
         height: 105px; } }
-  section .front, section .back {
-
+ 
+section .front, section .back {
     text-indent: -999999px;
     position: absolute;
     top: 0;
